# NARRA_FORGE

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  API_UI.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  DOCKER.md  DOCKER_BUILD.md  DOKUMENTACJA_PL.md  Dockerfile  Dockerfile.api  FIXES_COMPLETE.md  FRONTEND_SETUP.md  HEALTH_ENDPOINTS.md  MONITORING.md  Makefile  PHASE_1_COMPLETE.md  PHASE_1_COMPLETION_REPORT.md  PLAN_TRANSFORMACJI_NARRAFORGE.md  PLATFORM_DEVELOPMENT_PLAN.md  PLATFORM_IMPROVEMENTS.md  PR_BODY.md  PR_DESCRIPTION.md  QUALITY_FIRST_UPDATE.md  QUICKSTART.md  QUICKSTART_V2.md  README.md  README_EN.md  README_PL.md  TESTING.md  VALIDATION_REPORT.md  VERIFICATION_REPORT.md  alembic.ini  api-spec.json  (+33 more)
alembic/: README  env.py
api/: README.md  __init__.py  cache.py  celery_app.py  config.py  dependencies.py  main.py  middleware.py  monitoring.py  sentry_config.py
backend/: .dockerignore  .env.example  AI_SETUP.md  Dockerfile  alembic.ini  docker-entrypoint.sh  init.sql  main.py  pyproject.toml  requirements.txt
backend/agents/: base.py  character_smith.py  orchestrator.py  plot_master.py  prose_weaver.py  world_architect.py
backend/api/: main.py
backend/api/routers/: jobs.py  ws.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  base_agent.py  beat_sheet_architect.py  chapter_revision_agent.py  character_agent.py  character_creator_agent.py  consistency.py  deep_editor_agent.py  director_agent.py  model_tier_manager.py  orchestrator.py  plot_agent.py  plot_architect_agent.py  prose_agent.py  prose_writer_agent.py  publisher_agent.py  qa_validator_agent.py  quality_control_agent.py  religious_content_agent.py  repair_agent.py  scene_writer_agent.py  voice_consistency_validator.py  world_agent.py  world_architect.py  world_builder_agent.py
backend/app/api/: __init__.py  analytics.py  audiobook.py  auth.py  cache.py  coach.py  coherence.py  collaborative.py  complexity.py  consciousness.py  covers.py  cultural.py  dialogue.py  emotional.py  events.py  gateway.py  genre_blending.py  health.py  illustrations.py  interactive.py  mirix.py  monitoring.py  multilanguage.py  orchestrator.py  pacing.py  payments.py  platforms.py  projects.py  psychology.py  publishing.py  routes.py  series.py  soundtrack.py  style.py  style_marketplace.py  theme_weaving.py  trailer.py  trends.py  websockets.py
backend/app/core/: cost_optimizer.py  cost_tracker.py  openai_client.py  progress_tracker.py
backend/app/db/: database.py
backend/app/knowledge/: religious_knowledge_base.py
backend/app/models/: __init__.py  book.py  chapter.py  character.py  continuity_fact.py  generation_log.py  plot_structure.py  project.py  publishing.py  scene.py  series.py  user.py  world_bible.py
backend/app/prompts/: __init__.py  agent_prompts.py  bestseller_prompts.py  divine_prompts.py  genre_excellence_prompts.py  narrative_anti_patterns.py  title_analysis_prompt.txt
backend/app/schemas/: __init__.py  chapter.py  character.py  common.py  plot.py  project.py  world_bible.py
backend/app/services/: advanced_dialogue_system.py  agent_orchestrator.py  ai_service.py  analytics.py  api_gateway.py  audiobook_generator.py  auth_service.py  auto_character_creator.py  auto_repair_service.py  bestseller_quality_engine.py  cache_layer.py  chapter_pipeline.py  character_consciousness.py  character_visual_system.py  collaborative.py  complexity_adjustment.py  context_pack_builder.py  continuity_rag_service.py  cost_estimator_v2.py  cover_art_generator.py  cultural_intelligence.py  dynamic_parameters.py  emotional_resonance_engine.py  event_bus.py  export_service.py  genre_blending.py  illustration_pipeline.py  interactive_reading.py  live_preview_service.py  llm_service.py  mirix_memory_system.py  mirix_procedural_seeds.py  model_fallback_service.py  monitoring.py  multilanguage.py  orchestrator.py  predictive_pacing.py  project_service.py  publishing_integration.py  publishing_service.py  (+13 more)
backend/app/tasks/: generation_tasks.py
backend/app/utils/: cost_analysis.py
backend/core/: config.py  db.py  exceptions.py  logging.py
backend/migrations/: 001_add_simulation_fields.sql  002_add_error_message_field.sql  003_add_chapter_status.sql  004_add_user_system.sql  005_add_series_support.sql  006_add_publishing_support.sql  007_add_religious_genre.sql  008_add_mirix_vectors.sql  README.md  apply_migration.sh  env.py  init_schema.sql
backend/models/: database.py  schema.py
backend/models/schemas/: __init__.py  agent.py  base.py  domain.py  job.py
backend/services/: agent_tasks.py  cost_tracker.py  embeddings.py  job_tasks.py  model_policy.py  observability.py  openai_client.py  packaging.py  tasks.py  token_counter.py
backend/services/agents/: __init__.py  character_architect.py  interpreter.py  plot_creator.py  prose_generator.py  qa_agent.py  style_polish.py  world_architect.py
backend/tests/integration/: test_db.py  test_openai_live.py
backend/tests/unit/: test_agent_character_architect.py  test_agent_interpreter.py  test_agent_plot_creator.py  test_agent_prose_generator.py  test_agent_qa.py  test_agent_style_polish.py  test_agent_tasks.py  test_agent_world_architect.py  test_api.py  test_config.py  test_embeddings.py  test_exceptions.py  test_job_tasks.py  test_model_policy.py  test_observability.py  test_openai_client.py  test_packaging.py  test_schemas_agent.py  test_schemas_base.py  test_schemas_domain.py  test_schemas_job.py  test_tasks.py  test_token_counter.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
docs/: API.md  CHECKPOINTING.md  DATABASE.md  KROK_1_FUNDAMENT.md  KROK_2_DOCKER.md  KROK_3_DATABASE.md  KROK_4_PGVECTOR.md  SETUP_API.md  TYPE_SAFETY_SYSTEM.md
examples/: README.md  example_novella_scifi.py  example_programmatic_api.py  example_short_story.py
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts
(+214 files in other folders)
