[project]
name = "narraforge"
version = "1.0.0"
description = "Multi-agent AI platform for autonomous book generation"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "NarraForge Team" }
]

dependencies = [
    # ==================== FastAPI & Server ====================
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "websockets>=14.1",

    # ==================== Database ====================
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",

    # ==================== Cache & Queue ====================
    "redis>=5.2.0",
    "celery>=5.4.0",

    # ==================== AI/ML - LangChain Ecosystem ====================
    "langgraph>=0.2.70",
    "langchain>=0.3.20",
    "langchain-core>=0.3.30",
    "langchain-openai>=0.3.10",
    "langchain-community>=0.3.20",

    # ==================== OpenAI ====================
    "openai>=1.59.0",
    "tiktoken>=0.8.0",

    # ==================== Data Validation ====================
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",

    # ==================== Utilities ====================
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",

    # ==================== Document Generation ====================
    "python-docx>=1.1.2",
    "markdown>=3.7",

    # ==================== Date/Time ====================
    "python-dateutil>=2.9.0",

    # ==================== Logging ====================
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
    "faker>=33.1.0",
    "ipython>=8.31.0",
    "ipdb>=0.13.13",
]

test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
    "faker>=33.1.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "models", "api", "agents", "services", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "openai: Tests requiring OpenAI API",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["E501"]      # line too long in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
